# Financial_agent_simulator

./: README.md  pyproject.toml
src/financial_crew/: crew.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
src/financial_crew/config/: agents.yaml  tasks.yaml
src/financial_crew/output/: goal_tracking.md  report.md  simulated_cashflow.json  spending_review.md
